--- a/game.html
+++ b/game.html
@@ -3,22 +3,201 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Page</title>
+    <title>Interactive Story Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #333; /* Dark background */
+            color: #ccc; /* Light text */
+            display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            height: 100vh; /* Full viewport height */
+            flex-direction: column; /* Stack children vertically */
+        }
+
+        h1 {
+            text-align: center;
+            color: #fff; /* White text for headings */
+        }
+
+        #messageForm {
+            display: flex;
+            flex-direction: column;
+            width: 300px; /* Adjust width as needed */
+            margin: 0 auto; /* Center the form */
+            margin-bottom: 20px;
+        }
+
+        #messageForm input, #messageForm button {
+            margin-bottom: 10px; /* Space between elements */
+        }
+
+        #messageInput {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #555; /* Darker borders */
+            background-color: #222; /* Dark input fields */
+            color: #ddd; /* Light text */
+            border-radius: 5px;
+            outline: none;
+        }
+
+        #messageInput:focus {
+            border-color: dodgerblue;
+        }
+
+        #messageInput::placeholder {
+            color: #777; /* Darker placeholder */
+        }
+
+        #messageInput:focus::placeholder {
+            color: transparent;
+        }
+
+        #sendMessageBtn {
+            padding: 10px 20px;
+            background-color: #555; /* Darker button */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            outline: none;
+        }
+
+        #sendMessageBtn:hover {
+            background-color: #777; /* Lighter on hover */
+        }
+
+        #messages {
+            border: 1px solid #ccc;
+            padding: 10px;
+            width: 70%; /* Adjusted width to match input */
+            height: 400px;
+            overflow-y: auto;
+            margin: 20px auto; /* Centering messages */
+            background-color: #222; /* Dark background for messages */
+        }
+
+        .message {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            color: #ccc; /* Light text for messages */
+        }
+
+        .userMessage {
+            background-color: #444; /* Darker user message */
+            text-align: right;
+        }
+
+        .assistantMessage {
+            background-color: #555; /* Darker bot message */
+            text-align: left;
+        }
+
+        #introImage {
+            width: 50%; /* Full width */
+            height: 1000px; /* Fixed height, adjust as needed */
+            background: url('Dragon.png') no-repeat center center; /* Replace 'Dragon.png' with your image path */
+            background-size: cover;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Game Page</h1>
-    <div>
-        <p>Welcome, <span id="displayUsername"></span></p>
-        <!-- 更多遊戲內容 -->
-    </div>
-
+    <h1>Interactive Story Game</h1>
+    <div id="introImage"></div> <!-- Image above the form -->
+    <form id="messageForm">
+        <input type="text" id="messageInput" placeholder="Type your message here..." required>
+        <button id="sendMessageBtn" type="submit">Send</button>
+    </form>
+    <div id="messages"></div>
     <script>
-        window.onload = function() {
-            const username = localStorage.getItem('username');
+        // Get the user name and API key from localStorage
+        const userName = localStorage.getItem('userName');
+        const apiKey = localStorage.getItem('apiKey');
+
+        if (!apiKey) {
+            console.error('API key not found in localStorage');
+        }
+
+        // Display a welcome message
+        const welcomeMessage = `Welcome, ${userName}!`;
+        displayMessage(welcomeMessage, "assistant");
+
+        const endpoint = "https://api.openai.com/v1/chat/completions";
+        let conversationMemory = [];
+
+        document.getElementById('messageForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const userMessage = document.getElementById('messageInput').value;
+            if (!userMessage.trim()) return;
+            displayMessage(userMessage, userName);
+            conversationMemory.push({ role: "user", content: userMessage });
+            fetchChatGPTResponse();
+            document.getElementById('messageInput').value = '';
+        });
+
+        function fetchChatGPTResponse() {
+            // Get the API key from localStorage for each request
             const apiKey = localStorage.getItem('apiKey');
-            document.getElementById('displayUsername').textContent = username;
-            // 使用 apiKey 進行 API 呼叫等操作
-        };
+
+            if (!apiKey) {
+                console.error('API key not found in localStorage during fetchChatGPTResponse');
+                displayMessage("API key not found. Please go back to the welcome page and enter your API key.", "assistant");
+                return;
+            }
+
+            const requestData = {
+                model: "gpt-4",
+                messages: conversationMemory
+            };
+
+            fetch(endpoint, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': `Bearer ${apiKey}`
+                },
+                body: JSON.stringify(requestData)
+            }).then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    console.error('Error from API:', data.error);
+                    displayMessage(`Error from API: ${data.error.message}`, "assistant");
+                    return;
+                }
+                if (data.choices && data.choices.length > 0 && data.choices[0].message) {
+                    const assistantMessage = data.choices[0].message.content;
+                    displayMessage(assistantMessage, "assistant");
+                    conversationMemory.push({ role: "assistant", content: assistantMessage });
+                }
+            }).catch(error => {
+                console.error('Fetch error:', error);
+                displayMessage("Failed to get response from the assistant.", "assistant");
+            });
+        }
+
+        function displayMessage(message, sender) {
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            if (sender === userName) {
+                messageElement.classList.add('userMessage');
+                messageElement.textContent = `${sender}: ${message}`;
+            } else {
+                messageElement.classList.add('assistantMessage');
+                messageElement.textContent = `系統劇情: ${message}`;
+            }
+            document.getElementById('messages').appendChild(messageElement);
+            document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+        }
     </script>
 </body>
 </html>
