--- a/welcome.html
+++ b/welcome.html
@@ -112,7 +112,7 @@
     </style>
 </head>
 <body>
-    <h1>Interactive Story Game</h1>
+    <h1>魔法學院 - 冒險遊戲</h1>
     <div id="introImage"></div>
     <form id="messageForm">
         <input type="text" id="nameInput" placeholder="請輸入您的名稱..." required>
